apps/argocd/base/argocd-server-ingress.yaml
apiVersion: v1
items:
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: argocd
    namespace: argocd
  spec:
    ingressClassName: traefik
    rules:
    - host: argocd.p1.lab.basefarm.net
      http:
        paths:
        - backend:
            service:
              name: argocd-server
              port:
                number: 80
          path: /
          pathType: Prefix
